completed init template

--- a/src/styles/mars3d.scss
+++ b/src/styles/mars3d.scss
@@ -27,3 +27,8 @@
     outline: none;
   }
 }
+
+.cesium-viewer-toolbar-left-bottom .cesium-baseLayerPicker-dropDown {
+  left: auto !important;
+  right: 40px !important;
+}
