--- a/src/styles/mars3d.scss
+++ b/src/styles/mars3d.scss
@@ -1,34 +1,25 @@
 // 修改cesium原生按钮的位置
-.cesium-viewer-toolbar {
-  position: absolute !important;
-  bottom: 60px;
-  top: auto !important;
-  display: flex !important;
-  flex-direction: column;
+// .cesium-viewer-toolbar {
+//   position: absolute !important;
+//   bottom: 60px;
+//   top: auto !important;
+//   left: auto !important;
+//   right: 10px !important;
 
-  .cesium-button,
-  .cesium-toolbar-button {
-    display: block;
-    margin-bottom: 3px;
-  }
-
-  .cesium-baseLayerPicker-dropDown {
-    right: 45px;
-    bottom: 70px;
-    z-index: 99;
-  }
-}
+//   .cesium-baseLayerPicker-dropDown {
+//     right: 45px;
+//     bottom: 70px;
+//     z-index: 99;
+//     left: auto !important;
+//     right: 40px !important;
+//   }
+// }
 
 .mars3d-clockAnimate {
-  .time {
-    color: #f7f7f7;
+  #txt-clockAnimate-time {
+    color: #ffffff;
   }
   #txt-clockAnimate-speed {
     outline: none;
   }
-}
-
-.cesium-viewer-toolbar-left-bottom .cesium-baseLayerPicker-dropDown {
-  left: auto !important;
-  right: 40px !important;
 }
